fix: fixed wrong gramma

--- a/asmSim/en/index.html
+++ b/asmSim/en/index.html
@@ -508,9 +508,13 @@
                     </p>
                     <h2>Support</h2>
                     <span style="color: red"
-                        >Defintions: acc = Accumulator | [mem] = Value of a
-                        memory cell | op1 = Data provided with the instruction
-                        (operator 1) | sp = Stack Pointer</span
+                        >Defintions: <br />
+                        acc = Accumulator <br />
+                        [mem] = Value of a memory cell <br />
+                        op1 = Data provided with the instruction (operator 1)
+                        <br />
+                        sp = Stack Pointer<br />pc = Program-Counter<br />
+                        bx = Second Register</span
                     >
                     <p>
                         This project currently only supports the Minimaschine
