--- a/asmSim/index.html
+++ b/asmSim/index.html
@@ -498,7 +498,7 @@
                 <div id="documentation">
                     <h1>Dokumentation</h1>
                     <p>
-                        Dieses Projekt ist inspiert an Albert Wiedemanns
+                        Dieses Projekt ist inspiert von Albert Wiedemanns
                         "Minimaschine"
                         <a href="https://schule.awiedemann.de/minimaschine.html"
                             >hier</a
@@ -507,13 +507,18 @@
                     </p>
                     <h2>Unterstützung</h2>
                     <span style="color: red"
-                        >Definitionen: acc = Akkumulator | [mem] = Wert einer
-                        Speicherzelle | op1 = Der Operation übergebene Daten
-                        (operator 1) | sp = Stapelspeicher</span
+                        >Definitionen: <br />
+                        acc = Akkumulator <br />
+                        [mem] = Wert einer Speicherzelle <br />
+                        op1 = Der Operation übergebene Daten (operator 1)
+                        <br />
+                        sp = Stapelspeicher-Register <br />
+                        pc = Program-Zähler<br />
+                        bx = Zweites Register</span
                     >
                     <p>
-                        Das Projekt unterstütz derzeit eine erweiterung der
-                        Minimaschine Assembler Instructions (ID: mini-asm)
+                        Das Projekt unterstützt derzeit eine Erweiterung des
+                        Minimaschine-Befehlssatzes (ID: mini-asm)
                     </p>
                     <h2>Befehlssatz</h2>
                     <table id="strucTable">
