feat: Add #-Comment and HOLD-HALT

--- a/asmSim/changelog.html
+++ b/asmSim/changelog.html
@@ -130,6 +130,16 @@
                     <asm-code>label: ; This is a label </asm-code>
                 </td>
             </tr>
+            <tr>
+                <td>0.0.6</td>
+                <td>
+                    feat: Add #-Comment and HOLD-HALT
+                    <h3>Changes</h3>
+                    - feat: HOLD will automatically be replaced with HALT<br />
+                    - fix: HOLD is now called HALT <br />
+                    - feat: Language supports both # and ; as comment
+                </td>
+            </tr>
         </table>
     </body>
 </html>
