--- a/asmSim/en/index.html
+++ b/asmSim/en/index.html
@@ -45,7 +45,7 @@
                 <sasm-checkbox id="darkmodeToggle"></sasm-checkbox>
             </div>
             <div id="version">
-                Version: <span style="color: red">Beta</span> 0.0.5
+                Version: <span style="color: red">Beta</span> 0.0.6
             </div>
         </div>
         <main>
@@ -531,6 +531,11 @@
                         </thead>
                         <tbody id="strucTableBody"></tbody>
                     </table>
+                    <div>
+                        Comment begins: <asm-code>;</asm-code> (Intel's
+                        Standard) or <asm-code>#</asm-code> <br />
+                        Comment ends: End of line
+                    </div>
                     <h2>Shortcuts</h2>
                     <table>
                         <thead>
@@ -630,12 +635,22 @@
                     </table>
                     <h2>Project Information</h2>
                     <br />
+                    Github Site with License:
+                    <a
+                        href="https://github.com/smallhtmls/SmallHTMLs.github.io/"
+                        >https://github.com/smallhtmls/SmallHTMLs.github.io/</a
+                    ><br />
                     Contact Information:
                     <a href="mailto://noahp07.schools@gmail.com"
                         >noahp07.schools@gmail.com</a
                     >
                     <br />
-                    Version Changes: <a href="../changelog.html">Changelog</a>
+                    Version Changes:
+                    <a href="../changelog.html">Changelog</a
+                    >&nbsp;&nbsp;&nbsp;<a
+                        href="https://github.com/smallhtmls/SmallHTMLs.github.io/blob/main/asmSim/changelog.html"
+                        >RAW</a
+                    >
                 </div>
             </div>
         </main>
