--- a/asmSim/index.html
+++ b/asmSim/index.html
@@ -531,6 +531,11 @@
                         </thead>
                         <tbody id="strucTableBody"></tbody>
                     </table>
+                    <div>
+                        Kommentare-Anfang: <asm-code>;</asm-code> (nach Intel
+                        Standard) oder <asm-code>#</asm-code><br />
+                        Kommentare-Ende: Ende der Zeile
+                    </div>
                     <h2>Kurzbefehle</h2>
                     <table>
                         <thead>
@@ -635,12 +640,24 @@
 
                     <h2>Projekt-Information</h2>
                     <br />
+                    Github Seite mit License:
+                    <a
+                        href="https://github.com/smallhtmls/SmallHTMLs.github.io/"
+                        >https://github.com/smallhtmls/SmallHTMLs.github.io/</a
+                    ><br />
                     Kontakt Information:
                     <a href="mailto://noahp07.schools@gmail.com"
                         >noahp07.schools@gmail.com</a
                     >
                     <br />
-                    Versionänderungen: <a href="./changelog.html">Changelog</a>
+                    Versionänderungen:
+                    <a href="./changelog.html">Changelog</a> &nbsp; &nbsp;
+                    &nbsp;
+                    <a
+                        href="https://github.com/smallhtmls/SmallHTMLs.github.io/blob/main/asmSim/changelog.html"
+                        >RAW</a
+                    >
+                    <br />
                 </div>
             </div>
         </main>
